@@ -132,6 +132,10 @@ const char* const SPVM_OPCODE_C_CODE_NAMES[] = {
   "BIT_XOR_LONG",
   "COMPLEMENT_INT",
   "COMPLEMENT_LONG",
+  "PLUS_INT",
+  "PLUS_LONG",
+  "PLUS_FLOAT",
+  "PLUS_DOUBLE",
   "NEGATE_INT",
   "NEGATE_LONG",
   "NEGATE_FLOAT",
