@@ -132,6 +132,10 @@ enum {
   SPVM_OPCODE_C_CODE_BIT_XOR_LONG,
   SPVM_OPCODE_C_CODE_COMPLEMENT_INT,
   SPVM_OPCODE_C_CODE_COMPLEMENT_LONG,
+  SPVM_OPCODE_C_CODE_PLUS_INT,
+  SPVM_OPCODE_C_CODE_PLUS_LONG,
+  SPVM_OPCODE_C_CODE_PLUS_FLOAT,
+  SPVM_OPCODE_C_CODE_PLUS_DOUBLE,
   SPVM_OPCODE_C_CODE_NEGATE_INT,
   SPVM_OPCODE_C_CODE_NEGATE_LONG,
   SPVM_OPCODE_C_CODE_NEGATE_FLOAT,
