@@ -2550,6 +2550,39 @@ package TestCase {
     return 0;
   }
 
+  # Negate
+  sub plus : int () {
+    my $num_byte = (byte)1;
+    my $num_short = (short)1;
+    my $num_int = 1;
+    my $num_long = 1L;
+    my $num_float = 1f;
+    my $num_double = 1d;
+    
+    my $num_byte_plus : int = +$num_byte;
+    my $num_short_plus : int = +$num_short;
+    my $num_int_plus = +$num_int;
+    my $num_long_plus = +$num_long;
+    my $num_float_plus = +$num_float;
+    my $num_double_plus = +$num_double;
+    
+    if ($num_byte_plus == 1) {
+      if ($num_short_plus == 1) {
+        if ($num_int_plus == 1) {
+          if ($num_long_plus == 1L) {
+            if ($num_float_plus == 1f) {
+              if ($num_double_plus == 1d) {
+                return 1;
+              }
+            }
+          }
+        }
+      }
+    }
+    
+    return 0;
+  }
+
   # Complement
   sub complement : int () {
     my $num_byte = (byte)0xF0;
