@@ -8,6 +8,8 @@
   - add automatically type convertion to / operator
   - add automatically type convertion to % operator
   - add automatically type convertion to unary -
+  - fix unary + bug
+  - add automatically type convertion to unary +
   
 0.0309 2018-02-10
   - jit code is called from virtual machine
